@@ -49,10 +49,11 @@
     -n [--nesting] depth:        specify a new maximal include nesting depth
 	
   Extended options (allowed everywhere)
-    -t [--traceto] path:    output trace info to a file [path] or to stderr [-]
-    --timer                 output overall elapsed computing time
-    --variadics:            enable variadics and placemarkers in C++ mode
-    --c99:                  enable C99 mode (implies variadics and placemarkers)
+    -t [--traceto] arg:          output trace info to a file [arg] or to stderr [-]
+    --timer                      output overall elapsed computing time
+    --variadics:                 enable variadics and placemarkers in C++ mode
+    --c99:                       enable C99 mode (implies variadics and placemarkers)
+    -l [ --listincludes ] arg:   list included file to a file [arg] or to stdout [-]
 
 </pre>
 <P dir="ltr">The possible options are straightforward and self explanatory. The 
@@ -159,6 +160,10 @@
     about predefined macros you may look <a href="predefined_macros.html">here</a>. 
   </p>
 </blockquote>
+<p dir="ltr">-l [--listincludes] path</p>
+<blockquote>
+  <p dir="ltr">Enable the output of the names of all opened include files. The path specifies the filename to use for the output of the generated include log. If the filename given equals to <tt>'-'</tt> (without the quotes), the include log is put into the standard output stream (stdout).</p>
+</blockquote>
 <p dir="ltr">@ [--config-file] option</p>
 <blockquote> 
   <p dir="ltr">Some of the possible command line options may be specified inside 
@@ -214,7 +219,7 @@
 <font size="2">Distributed under the Boost Software License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt) </font> </p>
 <span class="updated"></span>
 <p class="copyright"><span class="updated">Last updated: 
-  <!-- #BeginDate format:fcAm1m -->Saturday, March 12, 2005  11:41<!-- #EndDate -->
+  <!-- #BeginDate format:fcAm1m -->Monday, March 14, 2005  11:11<!-- #EndDate -->
 </span></p>
 </body>
 </html>
